<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/round_btn"
    android:backgroundTint="@color/white"

    android:paddingVertical="@dimen/_20sdp"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:layout_height="wrap_content">

    <!--    global dialog that will be used across app-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_bold"
        android:text="@string/location_info"
        android:textColor="@color/main_color"
android:layout_gravity="center_horizontal"
        android:id="@+id/tv_title"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/gray"
        android:layout_marginVertical="@dimen/_10sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_bold"
        android:text="@string/name"
        android:textColor="@color/gray"


        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:elevation="@dimen/_4sdp"
        android:id="@+id/tv_address"
        style="@style/tv_normal"
        android:text="Rawalpindi behria \n town phase8"
        android:padding="@dimen/_10sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_bold"
        android:text="@string/latitude_longitude"
        android:textColor="@color/gray"

        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:elevation="@dimen/_4sdp"
        style="@style/tv_normal"
        android:id="@+id/tv_lat_long"
        android:text="4359459.343 / 349349.34"
        android:padding="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"

        android:orientation="horizontal"
        >
        <android.widget.Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:layout_weight="1"
            android:backgroundTint="#050505"
            android:text="@string/close"
            android:id="@+id/btn_no"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            />
        <android.widget.Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:id="@+id/btn_yes"
            android:text="@string/share"
            android:layout_marginHorizontal="@dimen/_10sdp"
            />
    </LinearLayout>
</LinearLayout>